--- a/package.json
+++ b/package.json
@@ -28,5 +28,19 @@
     "@types/jasmine": "^2.2.30",
     "typings": "^1.4.0",
     "tslint": "^3.15.1"
+  },
+  "dependencies": {
+    "@angular/core": "^2.0.0",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.23",
+    "ts-helpers": "^1.1.1"
   }
 }
