--- a/web/src/tsconfig.json
+++ b/web/src/tsconfig.json
@@ -12,6 +12,13 @@
     "target": "es5",
     "typeRoots": [
       "../node_modules/@types"
-    ]
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "@angular/*": ["../../node_modules/@angular/*"],
+      "@xapp/*": [
+        "../../x-shared/app/*"
+      ]
+    }
   }
 }
