--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -7,6 +7,9 @@
     "id": "io.ngxp.quotesapp",
     "tns-android": {
       "version": "2.3.0"
+    },
+    "tns-ios": {
+      "version": "2.3.0"
     }
   },
   "dependencies": {
@@ -16,13 +19,14 @@
     "@angular/forms": "2.0.0",
     "@angular/http": "2.0.0",
     "@angular/platform-browser": "2.0.0",
-    "@angular/platform-server": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/platform-server": "2.0.0",
     "@angular/router": "3.0.0",
     "nativescript-angular": "1.0.0",
+    "nativescript-plugin-firebase": "^3.6.3",
+    "nativescript-unit-test-runner": "^0.3.3",
     "reflect-metadata": "^0.1.8",
-    "tns-core-modules": "2.3.0",
-    "nativescript-unit-test-runner": "^0.3.3"
+    "tns-core-modules": "2.3.0"
   },
   "devDependencies": {
     "babel-traverse": "6.15.0",
