--- a/web/package.json
+++ b/web/package.json
@@ -12,8 +12,8 @@
   },
   "private": true,
   "dependencies": {
-    "firebase": "^3.4.1",
-    "material-design-lite": "^1.2.1"
+    "angular2-mdl": "^2.0.1",
+    "firebase": "^3.4.1"
   },
   "devDependencies": {
     "angular-cli": "^1.0.0-beta.16",
