--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -28,11 +28,12 @@
     "nativescript-material-icons": "^1.0.1",
     "nativescript-ng2-fonticon": "^1.2.6",
     "nativescript-plugin-firebase": "^3.7.1",
+    "nativescript-social-share": "^1.3.1",
     "nativescript-swiss-army-knife": "^1.0.71",
     "nativescript-telerik-ui": "^1.4.1",
     "nativescript-theme-core": "^0.1.2",
     "reflect-metadata": "^0.1.8",
-    "tns-core-modules": "2.3.0"
+    "tns-core-modules": "^2.4.0-2016-10-17-4410"
   },
   "devDependencies": {
     "babel-traverse": "6.15.0",
