Added x-platform typings folder to share common declarations. Updated angular package versions Added code related to symlink from angular-advanced-seed project.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ngcp-starter",
+  "name": "ngxp-quotes-app",
   "version": "1.0.0",
   "description": "A cross platform starter application.",
   "scripts": {
-    "postinstall": "cd web && npm install && cd ../nativescript && tns install && node ../tools/install.js && cd .. && typings install",
+    "ngxp-install": "npm install && cd web && npm install && cd ../nativescript && tns install && node ../tools/install.js && cd .. && typings install",
     "build.prod": "cd web && ng build --prod",
     "start": "cd web && ng serve",
     "start.prod": "cd web && ng serve --prod",
@@ -30,14 +30,14 @@
     "tslint": "^3.15.1"
   },
   "dependencies": {
-    "@angular/core": "^2.1.0",
-    "@angular/common": "2.1.0",
-    "@angular/compiler": "2.1.0",
-    "@angular/forms": "2.1.0",
-    "@angular/http": "2.1.0",
-    "@angular/platform-browser": "2.1.0",
-    "@angular/platform-browser-dynamic": "2.1.0",
-    "@angular/router": "3.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/forms": "~2.1.0",
+    "@angular/http": "~2.1.0",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/router": "~3.1.0",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.25",
