--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "A cross platform starter application.",
   "scripts": {
     "ngxp-install": "npm install && cd web && npm install && cd ../nativescript && tns install && node ../tools/install.js && cd .. && typings install",
+    "build": "cd web && ng build",
     "build.prod": "cd web && ng build --prod",
+    "build.aot": "cd web && ng build --aot",
+    "build.aot.prod": "cd web && ng build --aot --prod",
     "start": "cd web && ng serve",
     "start.prod": "cd web && ng serve --prod",
+    "start.aot": "cd web && ng serve --aot",
+    "start.aot.prod": "cd web && ng serve --aot --prod",
     "start.android": "cd nativescript && tns run android",
     "start.ios": "cd nativescript && tns run ios",
     "livesync.android": "cd nativescript && tns livesync android --watch",
