Changed status bar color on splashscreen for iOS to light.

--- a/nativescript/app/App_Resources/iOS/Info.plist
+++ b/nativescript/app/App_Resources/iOS/Info.plist
@@ -43,5 +43,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+  <key>UIStatusBarStyle</key>
+  <string>UIStatusBarStyleLightContent</string>
 </dict>
 </plist>
