--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -13,27 +13,27 @@
     }
   },
   "dependencies": {
-    "@angular/common": "2.1.0",
-    "@angular/compiler": "2.1.0",
-    "@angular/core": "2.1.0",
-    "@angular/forms": "2.1.0",
-    "@angular/http": "2.1.0",
-    "@angular/platform-browser": "2.1.0",
-    "@angular/platform-browser-dynamic": "2.1.0",
-    "@angular/router": "3.1.0",
-    "nativescript-angular": "1.1.0",
-    "nativescript-cardview": "^1.2.0",
-    "nativescript-floatingactionbutton": "^2.2.5",
-    "nativescript-iqkeyboardmanager": "^1.0.1",
-    "nativescript-material-icons": "^1.0.1",
-    "nativescript-ng2-fonticon": "^1.2.6",
-    "nativescript-plugin-firebase": "^3.7.1",
-    "nativescript-social-share": "^1.3.1",
-    "nativescript-swiss-army-knife": "^1.0.71",
-    "nativescript-telerik-ui": "^1.4.1",
-    "nativescript-theme-core": "^0.1.2",
-    "reflect-metadata": "^0.1.8",
-    "tns-core-modules": "^2.4.0-2016-10-17-4410"
+    "@angular/common": "2.1.2",
+    "@angular/compiler": "2.1.2",
+    "@angular/core": "2.1.2",
+    "@angular/forms": "2.1.2",
+    "@angular/http": "2.1.2",
+    "@angular/platform-browser": "2.1.2",
+    "@angular/platform-browser-dynamic": "2.1.2",
+    "@angular/router": "3.1.2",
+    "nativescript-angular": "1.1.2",
+    "nativescript-cardview": "~1.2.0",
+    "nativescript-floatingactionbutton": "~2.2.5",
+    "nativescript-iqkeyboardmanager": "~1.0.1",
+    "nativescript-material-icons": "~1.0.1",
+    "nativescript-ng2-fonticon": "~1.3.3",
+    "nativescript-plugin-firebase": "~3.7.2",
+    "nativescript-social-share": "~1.3.1",
+    "nativescript-swiss-army-knife": "~1.0.71",
+    "nativescript-telerik-ui": "~1.4.1",
+    "nativescript-theme-core": "~0.1.3",
+    "reflect-metadata": "~0.1.8",
+    "tns-core-modules": "~2.5.0-2016-11-08-4705"
   },
   "devDependencies": {
     "babel-traverse": "6.15.0",
