Pointing to demo firebase project.

--- a/nativescript/app/App_Resources/iOS/GoogleService-Info.plist
+++ b/nativescript/app/App_Resources/iOS/GoogleService-Info.plist
@@ -2,39 +2,35 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
-	<string>ca-app-pub-3940256099942544/2934735716</string>
-	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
-	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>27237848659-7o3q38buted3mdcjjrfngq10b83iki5s.apps.googleusercontent.com</string>
+	<string>18201924065-fskp2u3dkp0fhml9ou01npsmu6labbof.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.27237848659-7o3q38buted3mdcjjrfngq10b83iki5s</string>
+	<string>com.googleusercontent.apps.18201924065-fskp2u3dkp0fhml9ou01npsmu6labbof</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAIOLspKxzUJ1WbbTWWA9p3nGy0vJMq1Eg</string>
+	<string>00000000000000000000000000000000000000</string>
 	<key>GCM_SENDER_ID</key>
-	<string>27237848659</string>
+	<string>00000000000</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>io.ngxp.quotesapp</string>
 	<key>PROJECT_ID</key>
-	<string>ngxp-quotes-app</string>
+	<string>ngxp-quotes-app-a975f</string>
 	<key>STORAGE_BUCKET</key>
-	<string>ngxp-quotes-app.appspot.com</string>
+	<string>ngxp-quotes-app-a975f.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true/>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
 	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
 	<false/>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<false/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<false/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:27237848659:ios:a9782e5eecfd3d7f</string>
+	<string>1:18201924065:ios:a9782e5eecfd3d7f</string>
 	<key>DATABASE_URL</key>
-	<string>https://ngxp-quotes-app.firebaseio.com</string>
+	<string>https://ngxp-quotes-app-a975f.firebaseio.com</string>
 </dict>
 </plist>
