--- a/package.json
+++ b/package.json
@@ -30,20 +30,20 @@
   "author": "Shripal Soni",
   "license": "MIT",
   "devDependencies": {
-    "codelyzer": "0.0.28",
+    "codelyzer": "~1.0.0-beta.4",
     "@types/jasmine": "^2.2.30",
     "typings": "^1.4.0",
     "tslint": "^3.15.1"
   },
   "dependencies": {
-    "@angular/core": "~2.1.0",
-    "@angular/common": "~2.1.0",
-    "@angular/compiler": "~2.1.0",
-    "@angular/forms": "~2.1.0",
-    "@angular/http": "~2.1.0",
-    "@angular/platform-browser": "~2.1.0",
-    "@angular/platform-browser-dynamic": "~2.1.0",
-    "@angular/router": "~3.1.0",
+    "@angular/core": "~2.2.1",
+    "@angular/common": "~2.2.1",
+    "@angular/compiler": "~2.2.1",
+    "@angular/forms": "~2.2.1",
+    "@angular/http": "~2.2.1",
+    "@angular/platform-browser": "~2.2.1",
+    "@angular/platform-browser-dynamic": "~2.2.1",
+    "@angular/router": "~3.2.1",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.25",
