feat(Nativescript): Upgrade nativescript-theme-core to 0.2.3  and related changes. Upgrade tns-core-modules and runtime to 2.4.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,6 @@
-nativescript/hooks
-nativescript/node_modules
-nativescript/platforms
-nativescript/**/*.js.map
-nativescript/app/**/*.js
-nativescript/app/**/*.css
-nativescript/app/x-shared
-nativescript/lib
-nativescript/app/theme-core-scss
-nativescript/app/core.dark.android.scss
-nativescript/app/core.dark.ios.scss
-nativescript/app/core.light.android.scss
-nativescript/app/core.light.ios.scss
-nativescript/app/_bootstrap-map.scss
-nativescript/app/app.css
 node_modules
 x-shared/**/*.js.map
 x-shared/app/**/*.js
+x-shared/**/*.css
 typings
 !x-shared/typings
-web/node_modules
-web/src/x-shared
-web/dist
