--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -5,11 +5,11 @@
   "repository": "<fill-your-repository-here>",
   "nativescript": {
     "id": "io.ngxp.quotesapp",
-    "tns-android": {
-      "version": "2.3.0"
-    },
     "tns-ios": {
-      "version": "2.3.0"
+      "version": "2.4.0"
+    },
+    "tns-android": {
+      "version": "2.4.0"
     }
   },
   "dependencies": {
@@ -31,9 +31,9 @@
     "nativescript-social-share": "~1.3.1",
     "nativescript-swiss-army-knife": "~1.0.71",
     "nativescript-telerik-ui": "~1.4.1",
-    "nativescript-theme-core": "~0.1.3",
+    "nativescript-theme-core": "^0.2.3",
     "reflect-metadata": "~0.1.8",
-    "tns-core-modules": "~2.5.0-2016-11-08-4705"
+    "tns-core-modules": "~2.4.0"
   },
   "devDependencies": {
     "babel-traverse": "6.15.0",
