--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -9,40 +9,41 @@
       "version": "2.4.0"
     },
     "tns-android": {
-      "version": "2.4.0"
+      "version": "2.4.1"
     }
   },
   "dependencies": {
-    "@angular/common": "2.1.2",
-    "@angular/compiler": "2.1.2",
-    "@angular/core": "2.1.2",
-    "@angular/forms": "2.1.2",
-    "@angular/http": "2.1.2",
-    "@angular/platform-browser": "2.1.2",
-    "@angular/platform-browser-dynamic": "2.1.2",
-    "@angular/router": "3.1.2",
-    "nativescript-angular": "1.1.2",
+    "@angular/common": "~2.2.4",
+    "@angular/compiler": "~2.2.4",
+    "@angular/core": "~2.2.4",
+    "@angular/forms": "~2.2.4",
+    "@angular/http": "~2.2.4",
+    "@angular/platform-browser": "~2.2.4",
+    "@angular/platform-browser-dynamic": "~2.2.4",
+    "@angular/router": "~3.2.1",
+    "nativescript-angular": "1.2.0",
     "nativescript-cardview": "~1.2.0",
     "nativescript-floatingactionbutton": "~2.2.5",
     "nativescript-iqkeyboardmanager": "~1.0.1",
     "nativescript-material-icons": "~1.0.1",
     "nativescript-ng2-fonticon": "~1.3.3",
-    "nativescript-plugin-firebase": "~3.7.2",
+    "nativescript-plugin-firebase": "^3.8.4",
     "nativescript-social-share": "~1.3.1",
     "nativescript-swiss-army-knife": "~1.0.71",
     "nativescript-telerik-ui": "~1.4.1",
-    "nativescript-theme-core": "^0.2.3",
+    "nativescript-theme-core": "^1.0.2",
     "reflect-metadata": "~0.1.8",
+    "rxjs": "5.0.0-beta.12",
     "tns-core-modules": "~2.4.0"
   },
   "devDependencies": {
-    "babel-traverse": "6.15.0",
-    "babel-types": "6.15.0",
-    "babylon": "6.11.2",
+    "babel-traverse": "6.18.0",
+    "babel-types": "6.18.0",
+    "babylon": "6.13.1",
     "lazy": "1.0.11",
-    "nativescript-dev-sass": "^0.4.0",
+    "nativescript-dev-sass": "^0.4.1",
     "nativescript-dev-typescript": "^0.3.2",
-    "typescript": "^2.0.3",
-    "zone.js": "^0.6.21"
+    "typescript": "^2.0.9",
+    "zone.js": "~0.6.21"
   }
 }
