--- a/web/package.json
+++ b/web/package.json
@@ -20,15 +20,15 @@
     "@angular/platform-browser": "~2.2.1",
     "@angular/platform-browser-dynamic": "~2.2.1",
     "@angular/router": "~3.2.1",
+    "angular2-mdl": "2.7.0",
     "core-js": "^2.4.1",
+    "firebase": "^3.4.1",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.25",
     "ts-helpers": "^1.1.1",
-    "angular2-mdl": "^2.0.1",
-    "firebase": "^3.4.1"
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
-    "angular-cli": "1.0.0-beta.20-4",
+    "angular-cli": "1.0.0-beta.21",
     "codelyzer": "~1.0.0-beta.4",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
@@ -40,6 +40,6 @@
     "protractor": "4.0.5",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "2.0.2"
+    "typescript": "~2.0.3"
   }
 }
