--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "web",
-  "version": "0.0.0",
+  "name": "ngxp-quotes-app-web",
+  "version": "1.0.1",
+  "description": "A cross platform quotes application.",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
@@ -12,34 +13,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.2.1",
-    "@angular/compiler": "~2.2.1",
-    "@angular/core": "~2.2.1",
-    "@angular/forms": "~2.2.1",
-    "@angular/http": "~2.2.1",
-    "@angular/platform-browser": "~2.2.1",
-    "@angular/platform-browser-dynamic": "~2.2.1",
-    "@angular/router": "~3.2.1",
-    "angular2-mdl": "2.7.0",
+    "@angular/common": "^4.2.3",
+    "@angular/compiler": "^4.2.3",
+    "@angular/core": "^4.2.3",
+    "@angular/forms": "^4.2.3",
+    "@angular/http": "^4.2.3",
+    "@angular/platform-browser": "^4.2.3",
+    "@angular/platform-browser-dynamic": "^4.2.3",
+    "@angular/router": "^4.2.3",
+    "angular2-mdl": "^2.13.2",
     "core-js": "^2.4.1",
     "firebase": "^3.4.1",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.2.0",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.25"
+    "zone.js": "^0.8.10"
   },
   "devDependencies": {
-    "angular-cli": "1.0.0-beta.21",
-    "codelyzer": "~1.0.0-beta.4",
-    "jasmine-core": "2.4.1",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "@angular/cli": "^1.1.2",
+    "@angular/compiler-cli": "^4.2.3",
+    "@types/jasmine": "^2.5.52",
+    "@types/node": "^7.0.31",
+    "codelyzer": "^3.0.1",
+    "jasmine-core": "^2.6.4",
+    "jasmine-spec-reporter": "^4.1.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.5",
-    "ts-node": "1.2.1",
-    "tslint": "3.13.0",
-    "typescript": "~2.0.3"
+    "karma-jasmine": "^1.1.0",
+    "karma-remap-istanbul": "^0.6.0",
+    "protractor": "^5.1.2",
+    "ts-node": "^3.0.4",
+    "tslint": "^5.2.0",
+    "typescript": "^2.3.2"
   }
 }
