--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -1,49 +1,51 @@
 {
-  "description": "NativeScript Application",
-  "license": "SEE LICENSE IN <your-license-filename>",
-  "readme": "NativeScript Application",
+  "name": "ngxp-quotes-app-native",
+  "version": "1.0.1",
+  "description": "A cross platform quotes application.",
+  "license": "MIT",
+  "readme": "A cross platform quotes application.",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
     "id": "io.ngxp.quotesapp",
     "tns-ios": {
-      "version": "2.4.0"
+      "version": "3.0.0"
     },
     "tns-android": {
-      "version": "2.4.1"
+      "version": "3.0.0"
     }
   },
   "dependencies": {
-    "@angular/common": "~2.2.4",
-    "@angular/compiler": "~2.2.4",
-    "@angular/core": "~2.2.4",
-    "@angular/forms": "~2.2.4",
-    "@angular/http": "~2.2.4",
-    "@angular/platform-browser": "~2.2.4",
-    "@angular/platform-browser-dynamic": "~2.2.4",
-    "@angular/router": "~3.2.1",
-    "nativescript-angular": "1.2.0",
-    "nativescript-cardview": "~1.2.0",
-    "nativescript-floatingactionbutton": "~2.2.5",
-    "nativescript-iqkeyboardmanager": "~1.0.1",
-    "nativescript-material-icons": "~1.0.1",
-    "nativescript-ng2-fonticon": "~1.3.3",
-    "nativescript-plugin-firebase": "^3.8.4",
-    "nativescript-social-share": "~1.3.1",
-    "nativescript-swiss-army-knife": "~1.0.71",
-    "nativescript-telerik-ui": "~1.4.1",
-    "nativescript-theme-core": "^1.0.2",
+    "@angular/common": "~4.1.3",
+    "@angular/compiler": "~4.1.3",
+    "@angular/core": "~4.1.3",
+    "@angular/forms": "~4.1.3",
+    "@angular/http": "~4.1.3",
+    "@angular/platform-browser": "~4.1.3",
+    "@angular/platform-browser-dynamic": "~4.1.3",
+    "@angular/router": "~4.1.3",
+    "nativescript-angular": "~3.0.0",
+    "nativescript-cardview": "~2.0.2",
+    "nativescript-floatingactionbutton": "~3.0.0",
+    "nativescript-iqkeyboardmanager": "~1.1.0",
+    "nativescript-material-icons": "~1.0.3",
+    "nativescript-ngx-fonticon": "~2.2.1",
+    "nativescript-plugin-firebase": "^3.12.0",
+    "nativescript-social-share": "~1.3.2",
+    "nativescript-swiss-army-knife": "~3.0.0",
+    "nativescript-telerik-ui": "~2.0.1",
+    "nativescript-theme-core": "^1.0.4",
     "reflect-metadata": "~0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "tns-core-modules": "~2.4.0"
+    "rxjs": "~5.2.0",
+    "tns-core-modules": "~3.0.1",
+    "zone.js": "^0.8.10"
   },
   "devDependencies": {
-    "babel-traverse": "6.18.0",
-    "babel-types": "6.18.0",
-    "babylon": "6.13.1",
+    "babel-traverse": "6.24.1",
+    "babel-types": "6.24.1",
+    "babylon": "6.17.0",
     "lazy": "1.0.11",
-    "nativescript-dev-sass": "^0.4.1",
-    "nativescript-dev-typescript": "^0.3.2",
-    "typescript": "^2.0.9",
-    "zone.js": "~0.6.21"
+    "nativescript-dev-sass": "^1.1.1",
+    "nativescript-dev-typescript": "^0.4.2",
+    "typescript": "^2.3.2"
   }
 }
