feat(nativescript): Upgrade dependencies of nativescript project and related fixes

--- a/nativescript/firebase.nativescript.json
+++ b/nativescript/firebase.nativescript.json
@@ -3,7 +3,10 @@
     "using_android": true,
     "remote_config": false,
     "messaging": false,
+    "crash_reporting": false,
     "storage": false,
     "facebook_auth": false,
-    "google_auth": false
+    "google_auth": false,
+    "admob": false,
+    "invites": false
 }
