--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -8,10 +8,10 @@
   "nativescript": {
     "id": "io.ngxp.quotesapp",
     "tns-ios": {
-      "version": "3.0.0"
+      "version": "3.1.0"
     },
     "tns-android": {
-      "version": "3.0.0"
+      "version": "3.1.1"
     }
   },
   "dependencies": {
@@ -23,29 +23,29 @@
     "@angular/platform-browser": "~4.1.3",
     "@angular/platform-browser-dynamic": "~4.1.3",
     "@angular/router": "~4.1.3",
-    "nativescript-angular": "~3.0.0",
+    "nativescript-angular": "~3.1.3",
     "nativescript-cardview": "~2.0.2",
     "nativescript-floatingactionbutton": "~3.0.0",
     "nativescript-iqkeyboardmanager": "~1.1.0",
     "nativescript-material-icons": "~1.0.3",
     "nativescript-ngx-fonticon": "~2.2.1",
-    "nativescript-plugin-firebase": "^3.12.0",
+    "nativescript-plugin-firebase": "^4.0.5",
     "nativescript-social-share": "~1.3.2",
     "nativescript-swiss-army-knife": "~3.0.0",
-    "nativescript-telerik-ui": "~2.0.1",
+    "nativescript-telerik-ui": "~3.0.3",
     "nativescript-theme-core": "^1.0.4",
     "reflect-metadata": "~0.1.8",
     "rxjs": "~5.2.0",
-    "tns-core-modules": "~3.0.1",
+    "tns-core-modules": "~3.1.0",
     "zone.js": "^0.8.10"
   },
   "devDependencies": {
-    "babel-traverse": "6.24.1",
-    "babel-types": "6.24.1",
-    "babylon": "6.17.0",
+    "babel-traverse": "6.25.0",
+    "babel-types": "6.25.0",
+    "babylon": "6.17.4",
     "lazy": "1.0.11",
-    "nativescript-dev-sass": "^1.1.1",
-    "nativescript-dev-typescript": "^0.4.2",
-    "typescript": "^2.3.2"
+    "nativescript-dev-sass": "~1.2.0",
+    "nativescript-dev-typescript": "~0.5.0",
+    "typescript": "~2.3.4"
   }
 }
